fixed a bug that added a bug and fixed that too, added a feature that sets starting turn on even/uneven gameCount

--- a/styles/style.css
+++ b/styles/style.css
@@ -180,3 +180,14 @@ html {
         stroke-dashoffset: 0;
     }
 }
+
+/* .shaking{
+    animation: .001s drawAni infinite;
+}
+@keyframes drawAni {
+    0% { transform: translate(0, 0) rotate(0deg); }
+    25% { transform: translate(5px, 5px) rotate(5deg); }
+    50% { transform: translate(0, 0) rotate(0eg); }
+    75% { transform: translate(-5px, 5px) rotate(-5deg); }
+    100% { transform: translate(0, 0) rotate(0deg); }
+  } */
